docs(luong): cảnh báo phụ cấp = 0 khi ca chưa được chấm công
Migration đã áp dụng trên DB dùng chung; xác minh 4 bảng, 9 FK, 2 unique
constraint, 3 index đều đầy đủ và mọi câu SELECT của DAO chạy được trên
SQL Server thật (kiểm tra chỉ đọc, không ghi dữ liệu).

Khảo sát dữ liệu cho thấy luồng check-in/out gần như chưa dùng: 94 ca
Published nhưng chỉ 1 ca CheckedOut. Giữ nguyên quy tắc của spec §4
(CheckedOut + Confirmed) theo quyết định của chủ dự án, và ghi rõ hệ quả
vào checklist test để người kiểm thử không hiểu nhầm là lỗi.

Co-Authored-By: Claude <noreply@anthropic.com>